--- a/Neuronal_Network/Neuronal_Network.csproj
+++ b/Neuronal_Network/Neuronal_Network.csproj
@@ -42,11 +42,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HiddenLayer.cs" />
+    <Compile Include="InputLayer.cs" />
+    <Compile Include="Layer.cs" />
+    <Compile Include="MNIST\Extensions.cs" />
+    <Compile Include="MNIST\Image.cs" />
+    <Compile Include="MNIST\LayerMethodException.cs" />
+    <Compile Include="MNIST\MnistReader.cs" />
+    <Compile Include="NeuronalNetwork.cs" />
+    <Compile Include="OutputLayer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
